test/errors/error17_b.vult

fun foo() {
   val x = Error17.foo();
}
